fix libraries page in dark mode

--- a/theming/theme-dark.scss
+++ b/theming/theme-dark.scss
@@ -83,6 +83,53 @@ a {
     background-color: $background-nav !important;
 }
 
+.level4, .listing-category {
+    color: $foreground !important;
+}
+
+::selection {
+    color: $links-hover;
+    background: $background-nav;
+}
+
+.tooltip {
+    --bs-tooltip-color: $black !important;
+    --bs-tooltip-bg: $white !important;
+}
+
+// table background & text
+.packages-table {
+    background-color: $background-body !important;
+    color: $li-color !important;
+}
+
+// cell borders
+.packages-table th,
+.packages-table td {
+    border-bottom-color: $gray-900 !important;
+}
+
+// header row
+.packages-table thead {
+    background-color: $gray-900 !important;
+}
+
+// zebra stripes
+.packages-table tbody tr:nth-child(odd) {
+    background-color: darken($background-nav, 5%) !important;
+}
+
+// hover state
+.packages-table tbody tr:hover {
+    background-color: lighten($background-nav, 5%) !important;
+}
+
+// “Deprecated” badge styling
+.badge.deprecated {
+    color: $white !important;
+    background-color: $red !important;
+}
+
 // Universal Box Styling for Dark Mode
 .box {
     background-color: $panel-bg !important;
